--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
-# People that contributed to this project
+# This file lists all individuals having contributed content to the repository.
+# For how it is generated, see `hack/generate-authors.sh`.
 
 John Evwer <darealpiece@gmail.com>
